# dollarify-django

./: .gitignore  LICENSE  MANIFEST.in  README.md  TODO.todo  database.ini  database.sqlite3  manage.py  requirements.txt  setup.cfg  setup.py  test.csv  website.ini
account/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
account/migrations/: 0001_initial.py
account/templates/account/: disconnect.html  overview.html  register.html
core/: admin.py  currency.py  forms.py  managers.py  models.py  views.py  widget.py
core/fixtures/: default.json
core/templatetags/: accounts.py  currency.py  format.py
core/urls/: auth.py  dashboard.py  main.py  password.py  profile.py
core/urls/dashboard/: __init__.py  income.py  stock_market.py
core/views/: auth.py  dashboard.py  password.py  profile.py
core/views/dashboard/: __init__.py  income.py  stock_market.py
dashboard/: forms.py  urls.py  views.py
dashboard/templates/dashboard/: home.html
dollarify/: asgi.py  settings.py  urls.py  wsgi.py
src/dollarify/: __init__.py  __main__.py  debug.py  dollarify.py  settings.py
src/dollarify/api/: __init__.py
src/dollarify/core/: __init__.py
src/dollarify/db/: __init__.py  users.py  validators.py
src/dollarify_FredPerr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/tests/: conftest.py
static/script/: apexchart.js  dropdown.js  dropdowns.js  sidebar.js
static/style/: dashboard.scss  home.scss  profile.scss  stock-market-account.scss  style.scss  theme.scss
templates/: base.html  form-template.html  form.html  home.html
(+113 files in other folders)
