[metadata]
name = dollarify-FredPerr
version = 0.0.1
author = Fred Perr
author_email = frederic.perr@gmail.com
description = View your assets in a centralized place
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FredPerr/Dollarify
project_urls =
    Bug Tracker = https://github.com/FredPerr/Dollarify/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    main = dollarify:main